--- a/Finance Logger/public/index.html
+++ b/Finance Logger/public/index.html
@@ -40,9 +40,9 @@
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    
   </footer>
 
-  <script src='sandbox.js'></script>
+  <script type="module" src='app.js'></script>
 </body>
 </html>
